--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm ">  
     <div class="row">
         <div class="col-6">
-            <a href="" class="navbar-brand"><img src="assets/images/logo.png" class="img-fluid " alt="Logo"></a>
+            <a href="" class="navbar-brand"><img src="assets/images/logo.png" class="img-fluid " alt="logo"></a>
         </div>
     </div> 
     
