--- a/src/app/prod-header/prod-header.component.html
+++ b/src/app/prod-header/prod-header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">       
         
-        <img src="../../assets/images/logo.png"  class="img-fluid"  id="logo_img"> <span class="img_text">Brand Name</span></a>
+        <img src="assets/images/logo.png"  class="img-fluid"  id="logo_img"> <span class="img_text">Brand Name</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
